--- a/asd-projects/sorting-exercise/index.css
+++ b/asd-projects/sorting-exercise/index.css
@@ -8,8 +8,8 @@
 #goButton {
     margin: auto;
     width: 100%;
-    border: 2px darkgray double;
-    background: lightgray;
+    border: 2px rgb(169, 169, 169) double;
+    background: rgb(223, 97, 160);
     font-size: 30px;
 }
 #sortContainer {
@@ -20,7 +20,7 @@
 .subContainer {
     display: inline-block;
     width:45%;
-    border: 4px forestgreen groove;
+    border: 4px rgb(216, 48, 177) groove;
     margin-top: 1.25%;
 }
 #bubbleArea {
